--- a/Iessellaands.mw
+++ b/Iessellaands.mw
@@ -1,9 +1,9 @@
 [[Ofbeelding:Getijdenboek_Geert_Grote_Kasteel_Huis_Bergh_'s_Heerenberg.jpg‎|thumb|300px|De Dèventer geestelijke [[Geert Grote]] gebruukten 't Iessellaands, een schrieftaal mit Nedersaksische en Nederlaandse kenmarken, veur zien ''Getijdenboek'']]
- 
+
 '''Iessellaands''' (Nederlaands: ''IJssellands'') is een deur mederne [[taalkunde|taalkundigen]] gebruukte benaming veur een schrieftaal die ze in de [[Hanze|Hanzetied]] (roegweg tussen de [[13e eeuw|13e]] en de [[17e eeuw|17e ieuw]]) gebruukten in de [[Iessel|Iesselsteden]] [[Kampen (Overiessel)|Kampen]], [[Zwolle]], [[Dèventer]], [[Zutfent]] en [[Doezebarg]]. Dizze schrieftaal kenmarkt ze ok wal as [[Oostmiddelnederlaands]].
 
 ==Ontwikkeling==
-In talig opzicht was noordoost-Nederlaand al vrog een oavergaanksgebied. In de schrieveri'je wördden 't zo vanof de [[Middeleeuwen|Hoge Middelieuwen]] staorigan meer beïnvloed deur 't westen. Een belangrieke reden hierveur was det 't hudige [[Oaversticht|Overiessel en Drenthe]] onder 't [[Sticht Utrecht|bisdom Utrecht]] vielen.<ref>'Im 11. und 12. Jh. bilden sich die spätmittelalterlichen Territorien aus: der Bischof von Utrecht erwirbt östlich der Ijssel das ''Oversticht'' (Overijssel und Drenthe), der Graf von Geldern die Grafschaft Zutphen. Die politische Zugehörigkeit zum Bistum Utrecht und die Vorbildfunktion des dortigen Schreibwesens bewirken von Anfang an im Schreibgebrauch einen starken nl. Einfluß; nl. Merkmale greifen in der geschriebenen Sprache nach Osten über die Ijssel hinaus.' Uut: Robert Peters (1985), 'Soziokulturellen Voraussetzungen und Sprachraum des Mittelniederdeutschen', in Werner Besch, Oskar Reichmann en Stefan Sonderegger (red.), ''Sprachgeschichte. Ein Handbuch zur Geschichte der deutschen Sprache und ihrer Erforschung, Berlien/Ni'j York</ref>
+In talig opzicht was noordoost-Nederlaand al vrog een oavergaanksgebied. In de schrieveri'je wördden 't zo vanof de [[Middeleeuwen|Hoge Middelieuwen]] staorigan meer beïnvloed deur 't westen. Een belangrieke reden hierveur was det 't hudige [[Oaversticht|Overiessel en Drenthe]] onder 't [[Sticht Utrecht|bisdom Utrecht]] vielen.<ref>'Im 11. und 12. Jh. bilden sich die spätmittelalterlichen Territorien aus: der Bischof von Utrecht erwirbt östlich der Ijssel das ''Oversticht'' (Overijssel und Drenthe), der Graf von Geldern die Grafschaft Zutphen. Die politische Zugehörigkeit zum Bistum Utrecht und die Vorbildfunktion des dortigen Schreibwesens bewirken von Anfang an im Schreibgebrauch einen starken nl. Einfluß; nl. Merkmale greifen in der geschriebenen Sprache nach Osten über die Ijssel hinaus.' Uut: Robert Peters (1985), 'Soziokulturellen Voraussetzungen und Sprachraum des Mittelniederdeutschen', in Werner Besch, Oskar Reichmann en Stefan Sonderegger (red.), ''Sprachgeschichte. Ein Handbuch zur Geschichte der deutschen Sprache und ihrer Erforschung'', Berlien/Ni'j York</ref>
 
 Veurdet de schrieftaal dudelijker vernederlaandsten, ontstund in de Hanzesteden an de Iessel in de Late Middelieuwen een tussenvariaant tussen 't [[Middelnederlaands]] en 't [[Westfaolen|Westfaolse]] [[Middelnederduuts]]. Dizze schrieftaal wördden onder meer gebruukt deur de invloedrieke religieuze beweging van de [[Mederne devotie]].
 
