*Empty MediaWiki Message*

--- a/Ragnarök.mw
+++ b/Ragnarök.mw
@@ -8,6 +8,9 @@ Den oldnoorsken samenstelling ragnarok wördt al lange bedisterd. Et eyrste deyl
 Et meyrvold van et selfstandige naamwoord ''røk'' hevt verskillende bedüdingen, sou as "untwikkeling, oorsprung, oorsake, verband, lot." Et woord ragnarök in syn geheyl bedüdet dan sou wat as "lätste gudsbestemming."
 
 ==Verloup==
+===Voluspá===
+Volgens et dichtsel [[Voluspá]] in de dichtedda verlöpt et as volgt:
+
 Ragnarök vangt an med ne vöärspelling döär ne [[völva]], ne wårsegster, an Woden. De sünne sal in de summers swart strålen, et weader unstümig weasen. Drey hanen sölt kraien, nen rouden in et wold, eyne med ne guldene kamme in [[Valhalla]] en nen sotterouden in de underwearld by [[Hel]]. De [[Jötunn]]-[[herder]] [[Eggthér]] sal sitten up nen höävel en up synen [[harp]] spöälen. Den waakhund [[Garmr]], den as vöär de grotte [[Gnipahellir]] an de keaten ligt, sal beginnen te julen en lösbreaken. De mensken sint verdeyld: bröders ståt mekander når et leaven, süsterskinder verbreaket öär verwantskap, et is hard up de wearld en der is horery. Lüde hebbet gin genade meyr vöär mekander.
 
 De söäns van [[Mím]] sölt spöälen, terwyl as Woden med Mím syn höyvd spreakt. [[Heimdall]] steakt synen [[Gjallarhoorn]] de lucht in en puustet. De wearldboum [[Yggdrasil]] beavt en kröänt. Den [[Jötunn]] [[Hrym]] kümt vanuut et ousten, syn skild vöär sik. In [[Middelgård]] wringt sik de slange [[Jörmungandr]] döär de sey en warpet dårmed groute gulven up. Den Jötunn-adelaar [[Hræsfeldr]] kryst, en med synen skarpen nebben pikket hee an et lyk. Et skip [[naglfar]] slöt lös döär de gulven van Jörmungandr en drivt vord. De vüürjötnars kummet up vanuut [[Muspelheym]]. 
@@ -20,6 +23,12 @@ De wårsegster süt de aerde weader boaven water kummen. Nen adeler vlögt oaver
 
 Volgens de wårsegster least den gud Hœnir höltene stökkes üm de tokumst te vöärspellen. De söäns van twey bröders bewoanet de wyde winderige wearld. See süt in Gimlé ne halle med en golden dak, wår as de adel woanen sal en öäre leavens gemödelik leaven sölt. Vers 65 van et [[Hauksbók]] in de dichtedda's verwist når nen "krachtigen machthebber" den as "öäver allens regeyrt" en den as van böäventen kümt an et hov van de guden (oldnoorsk: ''regindómr''). Dit lätste wördt algemeyn eseen as ne [[kristendom|kristelike]] tovoging an et gedicht. In vers 66 beskrivt de wårsegster nen draak [[Níðhöggr]], den as med den bek vul lyken döär de lucht vlögt. Dårup löt sik de wårsegster dalesakken. Et is neet düdelik of de wårsegster in vers 66 når de hüdige tyd of nå-ragnarök verwist.
 
+===Vafþrúðnismál===
+In vers 39 van de Vafþrúðnismál wördt de Vanir-gud [[Njörðr]] nöömd in verband med Ragnarök. In et gedicht vechtet Wodan vermumd as Gagnráðr med de wyse jötunn Vafþrúðnir wee as et klookste is. Vafþrúðnismál verwist når Njörðr syn ståtus as krygsgevangene in de vrogere Oorlog tüsken de Æsir en Vanir en dat hee weader kummen sal underr de wyse Vanir te koste van de mensken.
+
+In vers 44 vrögt Wodan an Vafþrúðnir wee van de mensken de beroomde Fimbulwinter oaverleaven sal. Vafþrúðnir antwoordet in vers 45 dat dat Líf en Lifþrasir weasen sölt. Dee versteaket sik in et Hoddmímis holt en drinket van de morgendauw. See sölt geslacht up geslacht an nåwas bearven. In vers 46 vrögt Wodan wat vöär sünne as der kümt nå at den wulv [[Fenrir]] de hüdige sünne upesluked hevt. Vafþrúðnir verkundiget dat Sól ne dochter krigt vöärdat Fenrir öär gript. Dee dochter sal nå Ragnarök öäre moder syn pad volgen.
+
+In vers 51 verkundigt Vafþrúðnir dat nå et uutdöäven van Surtr syne vlammen, Wodan syne söäns Víðarr en Váli in de tempels van de guden leavet. Donar syne söäns Móði en Magni de hamer Mjöllnir draegen. In vers 52 vrögt den vermumden Wodan an de jötunn wat der van Wodan terechte kummen sal. Vafþrúðnir segt dat 'den wulv' Wodan sal upeaten en dat Víðarr em sal wreaken döär in en gevecht syne kolde kiwwe uut mekander te trekken. Wodan hevt dårnå noch eyne vråge vöär Vafþrúðnir: wat segt Wodan teagen synen söäne vöärdat hee syn doudsvüür maket? Dårdöär krigt Vafþrúðnir döär dat hee med Wodan selv te maken hevt. Hee nöömt em "den wysten van alle weasens" en segt dat enkel Wodan dat kan weaten. Wodan synen boadskap wördt seen as ne ankundiging van de weaderupstanding van Balder nå Ragnarök.
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Germaanse mythologie]]
