--- a/Erwin_Nyhoff.mw
+++ b/Erwin_Nyhoff.mw
@@ -1,4 +1,4 @@
-'''Erwin Nyhoff''' (Erwin Nijhoff) is een zanger, gitarist en liedtiesskriever uut [[Dalsen (dörp)|Dalsen]]. Hi'j zingt miest in 't Engels, mar hef ok in 't [[Sallaans]] op-eneumen.
+'''Erwin Nyhoff''' (Erwin Nijhoff) is een zanger, gitarist en liedtiesskriever uut [[Dalfsen (dörp)|Dalsen]]. Hi'j zingt miest in 't Engels, mar hef ok in 't [[Sallaans]] op-eneumen.
 
 ==The Prodigal Sons==
 In de jaoren neengtig was hi'j slim succesvol mit zien band [[The Prodigal Sons]], die mit 't debutalbum ''Wine of Life'' (1993) kats goed op 'e kaorte kwaamp te staon. De band speulden op 't [[Pinkpop]]-festival (1994) in [[Laandgraof]] en tweimaol op 't prestigieuze [[South by South West]]-festival in [[Austin]], [[Texas]] (1995 en 1997). 't Tweide album ''In the Eye of a Stranger'' (1995) harren de mèensen veule minder oog veur.
