--- a/Tweantse_zegswiezen.mw
+++ b/Tweantse_zegswiezen.mw
@@ -629,7 +629,7 @@ Wat van disse zegswiezen zeent ook in t Hollaands oawer te zetn, mer wordt lange
 |Wa's det dan/non?
 |-
 |Ze ligt op sterven
-|Hee is heel slech. Hee löp op de leste bene. Hee raakt uut de tied
+|Hee is heel slech. Hee löp op de leste bene. Hee raakt oet de tied
 |-
 |Zet maar bij het grof vuil
 |Op n as dr met
