--- a/Syprus.mw
+++ b/Syprus.mw
@@ -31,12 +31,12 @@ t [[Verienigd Keuninkriek|Verenigd Koninkriek]] bezet nog altied n militaere bao
 * bevolkingsdichtheid: 123,4/km<sup>2</sup>
 
 === Stejen ===
-De [[heufdstad|heufstad]] is [[Nikosia]] (Levkosía in t [[Grieks]] / Lefkoşa in t [[Turks]]). 
+De [[heufdstad|heufstad]] is [[Nikosia]] (Λευκωσία, Levkosía in t [[Grieks]] / Lefkoşa in t [[Turks]]). 
 
 Aandere belangrieke stejen op t eilaand bin:
-* [[Limassol]]
-* [[Larnaka]]
-* [[Pafos]]
+* [[Limassol]] ([[Turks]] ''Limasol''; [[Grieks]]: ''Λεμεσός'', ''Lemessós'') 
+* [[Larnaka]] ([[Turks]] ''Larnaka''; [[Grieks]]: ''Λάρνακα'', ''Larnaka'') 
+* [[Pafos]] ([[Turks]] ''Baf''; [[Grieks]]: ''Πάφος'', ''Pafos'') 
 * [[Famagusta]] ([[Turks]] ''Gazimağusa''; [[Grieks]]: ''Αμμόχωστος'', ''Ammóchostos'') (Turkse Rippebliek Noord-Syprus)
 * [[Kyrenia]] ([[Turks]]: ''Girne''; [[Grieks]]: ''Κερύνεια'', ''Keryneia'') (Turkse Rippebliek Noord-Syprus)
 
