--- a/Roggemoer.mw
+++ b/Roggemoer.mw
@@ -9,24 +9,27 @@ en de korrels (in et [[Drèents|drentsk]]) krèeikörrels.
 In een oldere gedöänte is et wyv een vegetaty-geyst; de kracht dee et gewas düt gröien. As y der neet med gepaste gebrüken mid ümme gåt, heb y geyn gode ougst.
 
 ==De roggemoder in de neadersassiske skryverye==
-:''Want het wordt aal stoareg grauwer
-:''en den komt de ròggemouer,
-:''zwaart van hoaren,
-:''kikt oet 't koren
-:''en bie 't minste, wat ze speurt,
-:''gript ze die - en 't is gebeurd!...
+<poem style="margin-left:1.5em; font-style:italic">
+Want het wordt aal stoareg grauwer
+en den komt de ròggemouer,
+zwaart van hoaren,
+kikt oet 't koren
+en bie 't minste, wat ze speurt,
+gript ze die - en 't is gebeurd!...
+</poem>
 
 Üüt [[Jan Boer]] syn gedicht 'Ròggemouer', in ''Zummervaalg'' (Assen: Van Gocum & Comp. N.V., 1949)
 <br><br>
-:''De hoge smuie oaren
-:''Boegen veur het kind oet zied
-:''De roggeboaren zingen
-:''Van nacht en vrouger tied.
-
-:''Doar vlogt wat over 't koren
-:''Oet d'oaren dook het op:
-:'' 'n Swaarde groote spoukwief
-:''Mit hoareg roege kop.
+<poem style="margin-left:1.5em; font-style:italic">
+De hoge smuie oaren
+Boegen veur het kind oet zied
+De roggeboaren zingen
+Van nacht en vrouger tied.
+Doar vlogt wat over 't koren
+Oet d'oaren dook het op:
+'n Swaarde groote spoukwief
+Mit hoareg roege kop.
+</poem>
 
 Üüt [[Derk Sibolt Hovinga]] syn gedicht 'Roggemouer'
 
