/* Komplete resultåten van de Formule 3 Euro Series */

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -688,26 +688,26 @@ Hamilton gebrukeden nen goldekleureden helm by den Grouten Prys van Abu Dhabi va
 ! [[Manor Motorsport]]
 ! [[Dallara]] F302/049
 ! [[Mercedes-Benz in den motorsport|HWA-Mercedes]]
-|style="background:#CFCFFF;"| [[Hockenheimring|HOC<br />1]]<br />{{small|11}}
-|style="background:#DFFFDF;"| [[Hockenheimring|HOC<br />2]]<br />{{small|6}}
-|style="background:#EFCFFF;"| [[Autódromo do Estoril|EST<br />1]]<br />{{small|terügetrökken}}
-|style="background:#CFCFFF;"| [[Autódromo do Estoril|EST<br />2]]<br />{{small|9}}
-|style="background:#EFCFFF;"| [[Adria International Raceway|ADR<br />1]]<br />{{small|terügetrökken}}
-|style="background:#DFFFDF;"| [[Adria International Raceway|ADR<br />2]]<br />{{small|5}}
-|style="background:#DFFFDF;"| [[Pau Grand Prix|PAU<br />1]]<br />{{small|4}}
-|style="background:#DFFFDF;"| [[Pau Grand Prix|PAU<br />2]]<br />{{small|7}}
-|style="background:#FFFFBF;"| '''[[Norisring|NOR<br />1]]'''<br />{{small|1}}
-|style="background:#FFDF9F;"| ''[[Norisring|NOR<br />2]]''<br />{{small|3}}
-|style="background:#EFCFFF;"| [[Circuit de Nevers Magny-Cours|MAG<br />1]]<br />{{small|terügetrökken}}
-|style="background:#CFCFFF;"| ''[[Circuit de Nevers Magny-Cours|MAG<br />2]]''<br />{{small|21}}
-|style="background:#FFDF9F;"| [[Nürburgring|NÜR<br />1]]<br />{{small|3}}
-|style="background:#DFFFDF;"| [[Nürburgring|NÜR<br />2]]<br />{{small|4}}
-|style="background:#FFDF9F;"| [[Circuit Park Zandvoort|ZAN<br />1]]<br />{{small|3}}
-|style="background:#DFFFDF;"| [[Circuit Park Zandvoort|ZAN<br />2]]<br />{{small|6}}
-|style="background:#DFFFDF;"| [[Masaryk Circuit|BRN<br />1]]<br />{{small|7}}
-|style="background:#DFFFDF;"| [[Masaryk Circuit|BRN<br />2]]<br />{{small|4}}
-|style="background:#DFDFDF;"| [[Hockenheimring|HOC<br />1]]<br />{{small|2}}
-|style="background:#DFFFDF;"| [[Hockenheimring|HOC<br />2]]<br />{{small|6}}
+|style="background:#CFCFFF;"| [[Hockenheimring|HOC<br />1]]<br />11
+|style="background:#DFFFDF;"| [[Hockenheimring|HOC<br />2]]<br />6
+|style="background:#EFCFFF;"| [[Autódromo do Estoril|EST<br />1]]<br />terügetrökken
+|style="background:#CFCFFF;"| [[Autódromo do Estoril|EST<br />2]]<br />9
+|style="background:#EFCFFF;"| [[Adria International Raceway|ADR<br />1]]<br />terügetrökken
+|style="background:#DFFFDF;"| [[Adria International Raceway|ADR<br />2]]<br />5
+|style="background:#DFFFDF;"| [[Pau Grand Prix|PAU<br />1]]<br />4
+|style="background:#DFFFDF;"| [[Pau Grand Prix|PAU<br />2]]<br />7
+|style="background:#FFFFBF;"| '''[[Norisring|NOR<br />1]]'''<br />1
+|style="background:#FFDF9F;"| ''[[Norisring|NOR<br />2]]''<br />3
+|style="background:#EFCFFF;"| [[Circuit de Nevers Magny-Cours|MAG<br />1]]<br />terügetrökken
+|style="background:#CFCFFF;"| ''[[Circuit de Nevers Magny-Cours|MAG<br />2]]''<br />21
+|style="background:#FFDF9F;"| [[Nürburgring|NÜR<br />1]]<br />3
+|style="background:#DFFFDF;"| [[Nürburgring|NÜR<br />2]]<br />4
+|style="background:#FFDF9F;"| [[Circuit Park Zandvoort|ZAN<br />1]]<br />3
+|style="background:#DFFFDF;"| [[Circuit Park Zandvoort|ZAN<br />2]]<br />6
+|style="background:#DFFFDF;"| [[Masaryk Circuit|BRN<br />1]]<br />7
+|style="background:#DFFFDF;"| [[Masaryk Circuit|BRN<br />2]]<br />4
+|style="background:#DFDFDF;"| [[Hockenheimring|HOC<br />1]]<br />2
+|style="background:#DFFFDF;"| [[Hockenheimring|HOC<br />2]]<br />6
 ! 5des
 ! 68
 |-
@@ -715,26 +715,26 @@ Hamilton gebrukeden nen goldekleureden helm by den Grouten Prys van Abu Dhabi va
 ! [[ART Grand Prix|ASM Formule 3]]
 ! [[Dallara]] F305/021
 ! [[Mercedes-Benz in den motorsport|Mercedes]]
-|style="background:#FFFFBF;"| '''''[[Hockenheimring|HOC<br />1]]'''''<br />{{small|1}}
-|style="background:#FFDF9F;"| [[Hockenheimring|HOC<br />2]]<br />{{small|3}}
-|style="background:#FFFFBF;"| '''''[[Pau Grand Prix|PAU<br />1]]'''''<br />{{small|1}}
-|style="background:#FFFFBF;"| '''''[[Pau Grand Prix|PAU<br />2]]'''''<br />{{small|1}}
-| style="background:#000; color:white;"| '''[[Circuit de Spa-Francorchamps|<span style="color:white">SPA<br />1</span>]]'''<br />{{small|diskwalificered}}
-|style="background:#FFFFBF;"| ''[[Circuit de Spa-Francorchamps|SPA<br />2]]''<br />{{small|1}}
-|style="background:#FFFFBF;"| '''[[Circuit de Monaco|MON<br />1]]'''<br />{{small|1}}
-|style="background:#FFFFBF;"| '''''[[Circuit de Monaco|MON<br />2]]''''' <br />{{small|1}}
-|style="background:#FFDF9F;"| [[Motorsport Arena Oschersleben|OSC<br />1]]<br />{{small|3}}
-|style="background:#FFFFBF;"| '''''[[Motorsport Arena Oschersleben|OSC<br />2]]'''''<br />{{small|1}}
-|style="background:#FFFFBF;"| '''''[[Norisring|NOR<br />1]]'''''<br />{{small|1}}
-|style="background:#FFFFBF;"| '''[[Norisring|NOR<br />2]]'''<br />{{small|1}}
-|style="background:#CFCFFF;"| [[Nürburgring|NÜR<br />1]]<br />{{small|12}}
-|style="background:#FFFFBF;"| ''[[Nürburgring|NÜR<br />2]]''<br />{{small|1}}
-|style="background:#EFCFFF;"| '''[[Circuit Park Zandvoort|ZAN<br />1]]'''<br />{{small|terügetrökken}}
-|style="background:#FFFFBF;"| '''[[Circuit Park Zandvoort|ZAN<br />2]]'''<br />{{small|1}}
-|style="background:#FFFFBF;"| [[EuroSpeedway Lausitz|LAU<br />1]]<br />{{small|1}}
-|style="background:#FFFFBF;"| ''[[EuroSpeedway Lausitz|LAU<br />2]]''<br />{{small|1}}
-|style="background:#FFFFBF;"| '''[[Hockenheimring|HOC<br />1]]'''<br />{{small|1}}
-|style="background:#FFFFBF;"| '''''[[Hockenheimring|HOC<br />2]]'''''<br />{{small|1}}
+|style="background:#FFFFBF;"| '''''[[Hockenheimring|HOC<br />1]]'''''<br />1
+|style="background:#FFDF9F;"| [[Hockenheimring|HOC<br />2]]<br />3
+|style="background:#FFFFBF;"| '''''[[Pau Grand Prix|PAU<br />1]]'''''<br />1
+|style="background:#FFFFBF;"| '''''[[Pau Grand Prix|PAU<br />2]]'''''<br />1
+| style="background:#000; color:white;"| '''[[Circuit de Spa-Francorchamps|<span style="color:white">SPA<br />1</span>]]'''<br />ediskwalificered
+|style="background:#FFFFBF;"| ''[[Circuit de Spa-Francorchamps|SPA<br />2]]''<br />1
+|style="background:#FFFFBF;"| '''[[Circuit de Monaco|MON<br />1]]'''<br />1
+|style="background:#FFFFBF;"| '''''[[Circuit de Monaco|MON<br />2]]''''' <br />1
+|style="background:#FFDF9F;"| [[Motorsport Arena Oschersleben|OSC<br />1]]<br />3
+|style="background:#FFFFBF;"| '''''[[Motorsport Arena Oschersleben|OSC<br />2]]'''''<br />1
+|style="background:#FFFFBF;"| '''''[[Norisring|NOR<br />1]]'''''<br />1
+|style="background:#FFFFBF;"| '''[[Norisring|NOR<br />2]]'''<br />1
+|style="background:#CFCFFF;"| [[Nürburgring|NÜR<br />1]]<br />12
+|style="background:#FFFFBF;"| ''[[Nürburgring|NÜR<br />2]]''<br />1
+|style="background:#EFCFFF;"| '''[[Circuit Park Zandvoort|ZAN<br />1]]'''<br />terügetrökken
+|style="background:#FFFFBF;"| '''[[Circuit Park Zandvoort|ZAN<br />2]]'''<br />1
+|style="background:#FFFFBF;"| [[EuroSpeedway Lausitz|LAU<br />1]]<br />1
+|style="background:#FFFFBF;"| ''[[EuroSpeedway Lausitz|LAU<br />2]]''<br />1
+|style="background:#FFFFBF;"| '''[[Hockenheimring|HOC<br />1]]'''<br />1
+|style="background:#FFFFBF;"| '''''[[Hockenheimring|HOC<br />2]]'''''<br />1
 !style="background:#FFFFBF;"| 1stes
 !style="background:#FFFFBF;"| 172
 |-
