/* Komplete resultåten van de GP2 Series */

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -772,27 +772,27 @@ Hamilton gebrukeden nen goldekleureden helm by den Grouten Prys van Abu Dhabi va
 |-
 | [[GP2 Series van 2006|2006]]
 ! [[ART Grand Prix]]
-|style="background:#DFDFDF;"| [[2006 Valencian GP2 round|VAL<br />FEA]]<br />{{small|2}}
-|style="background:#DFFFDF;"| [[2006 Valencian GP2 round|VAL<br />SPR]]<br />{{small|6}}
-| style="background:#000; color:white;"| [[2006 San Marino GP2 round|<span style="color:white">IMO<br />FEA</span>]]<br />{{small|Diskwalificered}}
-|style="background:#CFCFFF;"| [[2006 San Marino GP2 round|IMO<br />SPR]]<br />{{small|10}}
-|style="background:#ffffbf;"| ''[[2006 European GP2 round|NÜR<br />FEA]]''<br />{{small|1}}
-|style="background:#ffffbf;"| [[2006 European GP2 round|NÜR<br />SPR]]<br />{{small|1}}
-|style="background:#DFDFDF;"| [[Circuit de Catalunya|CAT<br />FEA]]<br />{{small|2}}
-|style="background:#DFFFDF;"| [[Circuit de Catalunya|CAT<br />SPR]]<br />{{small|4}}
-|style="background:#ffffbf;"| '''[[Circuit de Monaco|MON<br />FEA]]'''<br />{{small|1}}
-|style="background:#ffffbf;"| ''[[Silverstone Circuit|SIL<br />FEA]]''<br />{{small|1}}
-|style="background:#ffffbf;"| ''[[Silverstone Circuit|SIL<br />SPR]]''<br />{{small|1}}
-|style="background:#CFCFFF;"| ''[[Circuit de Nevers Magny-Cours|MAG<br />FEA]]''<br />{{small|19}}
-|style="background:#DFFFDF;"| [[Circuit de Nevers Magny-Cours|MAG<br />SPR]]<br />{{small|5}}
-|style="background:#DFDFDF;"| [[Hockenheimring|HOC<br />FEA]]<br />{{small|2}}
-|style="background:#FFDF9F;"| [[Hockenheimring|HOC<br />SPR]]<br />{{small|3}}
-|style="background:#CFCFFF;"| [[Hungaroring|HUN<br />FEA]]<br />{{small|10}}
-|style="background:#DFDFDF;"| [[Hungaroring|HUN<br />SPR]]<br />{{small|2}}
-|style="background:#DFDFDF;"| [[Istanbul Park|IST<br />FEA]]<br />{{small|2}}
-|style="background:#DFDFDF;"| ''[[Istanbul Park|IST<br />SPR]]''<br />{{small|2}}
-|style="background:#FFDF9F;"| ''[[Autodromo Nazionale Monza|MNZ<br />FEA]]''<br />{{small|3}}
-|style="background:#DFDFDF;"| ''[[Autodromo Nazionale Monza|MNZ<br />SPR]]''<br />{{small|2}}
+|style="background:#DFDFDF;"| [[2006 Valencian GP2 round|VAL<br />FEA]]<br />2
+|style="background:#DFFFDF;"| [[2006 Valencian GP2 round|VAL<br />SPR]]<br />6
+| style="background:#000; color:white;"| [[2006 San Marino GP2 round|<span style="color:white">IMO<br />FEA</span>]]<br />Ediskwalificered
+|style="background:#CFCFFF;"| [[2006 San Marino GP2 round|IMO<br />SPR]]<br />10
+|style="background:#ffffbf;"| ''[[2006 European GP2 round|NÜR<br />FEA]]''<br />1
+|style="background:#ffffbf;"| [[2006 European GP2 round|NÜR<br />SPR]]<br />1
+|style="background:#DFDFDF;"| [[Circuit de Catalunya|CAT<br />FEA]]<br />2
+|style="background:#DFFFDF;"| [[Circuit de Catalunya|CAT<br />SPR]]<br />4
+|style="background:#ffffbf;"| '''[[Circuit de Monaco|MON<br />FEA]]'''<br />1
+|style="background:#ffffbf;"| ''[[Silverstone Circuit|SIL<br />FEA]]''<br />1
+|style="background:#ffffbf;"| ''[[Silverstone Circuit|SIL<br />SPR]]''<br />1
+|style="background:#CFCFFF;"| ''[[Circuit de Nevers Magny-Cours|MAG<br />FEA]]''<br />19
+|style="background:#DFFFDF;"| [[Circuit de Nevers Magny-Cours|MAG<br />SPR]]<br />5
+|style="background:#DFDFDF;"| [[Hockenheimring|HOC<br />FEA]]<br />2
+|style="background:#FFDF9F;"| [[Hockenheimring|HOC<br />SPR]]<br />3
+|style="background:#CFCFFF;"| [[Hungaroring|HUN<br />FEA]]<br />10
+|style="background:#DFDFDF;"| [[Hungaroring|HUN<br />SPR]]<br />2
+|style="background:#DFDFDF;"| [[Istanbul Park|IST<br />FEA]]<br />2
+|style="background:#DFDFDF;"| ''[[Istanbul Park|IST<br />SPR]]''<br />2
+|style="background:#FFDF9F;"| ''[[Autodromo Nazionale Monza|MNZ<br />FEA]]''<br />3
+|style="background:#DFDFDF;"| ''[[Autodromo Nazionale Monza|MNZ<br />SPR]]''<br />2
 !style="background:#FFFFBF;"| 1stes
 !style="background:#FFFFBF;"| 114
 |-
