--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -650,6 +650,17 @@ Hamilton gebrukeden nen goldekleureden helm by den Grouten Prys van Abu Dhabi va
 | 347
 |style="background:#FFFFBF;"|'''1stes'''
 |-
+! 2021
+|align=left| [[Formule Eyn Werldkampioonskap|Formule Eyn]]
+|style="text-align:left;"| [[Mercedes-Benz in de Formule Eyn|Mercedes-AMG Petronas F1 Team]]
+| 3
+| 2
+| 1
+| 1
+| 3
+| 69*
+! '''1stes'''*
+|-
 |}
 
 ===Komplete resultåten van de Formule 3 Euro Series===
