/* Komplete resultåten van de Formule Eyn */

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -1233,10 +1233,39 @@ Hamilton gebrukeden nen goldekleureden helm by den Grouten Prys van Abu Dhabi va
 | style="background:#ffffbf;"| '''1stes'''
 | style="background:#ffffbf;"| '''347'''
 |-
+| [[Formule Eyn Werldkampioonskap van 2021|2021}}
+! [[Mercedes-Benz in de Formule Eyn|Mercedes-AMG Petronas F1 Team]]
+! [[Mercedes-Benz in de Formule Eyn|Mercedes AMG]] [[Mercedes-AMG F1 W12 EQ Performance|F1 W12 EQ Performance]]
+! [[Mercedes AMG High Performance Powertrains|Mercedes]] M12 EQ Performance 1.6 [[V6 engine|V6]] [[Turbocharger|t]]
+| [[Grouten Prys van Bahrein van 2021|BHR]]<br />1
+| [[Grouten Prys van Emilie van 2021|EMI]]<br />2
+| [[Grouten Prys van Portugal van 2021|POR]]<br />1
+| [[Grouten Prys van Spanje van 2021|ESP]]
+| [[Grouten Prys van Monako van 2021|MON]]
+| [[Grouten Prys van Azerbeidjan van 2021|AZE]]
+| [[Grouten Prys van Turkeye van 2021|TUR]]
+| [[Grouten Prys van Frankryk van 2021|FRA]]
+| [[Grouten Prys van Oustenryk van 2021|AUT]]
+| [[Grouten Prys van Groutbrittanie van 2021|GBR]]
+| [[Grouten Prys van Hungarye van 2021|HUN]]
+| [[Grouten Prys van Belgie van 2021|BEL]]
+| [[Grouten Prys van Neaderland van 2021|NED]]
+| [[Grouten Prys van Italie van 2021|ITA]]
+| [[Grouten Prys van Rusland van 2021|RUS]]
+| [[Grouten Prys van Singapore van 2021|SIN]]
+| [[Grouten Prys van Japan van 2021|JPN]]
+| [[Grouten Prys van Vereynigede Ståten van 2021|USA]]
+| [[Grouten Prys van Meksiko van 2021|MXC]]
+| [[Grouten Prys van Sao Paulo van 2021|SAP]]
+| [[Grouten Prys van Australie van 2021|AUS]]
+| [[Grouten Prys van Saudiarabie van 2021|SAU]]
+| [[Grouten Prys van Abu Dhabi van 2021|ABU]]
+! '''1stes'''*
+! 69*
 |}
 <nowiki>*</nowiki> Seisoon nog beasig.<br />
-{{smallsup|†}} Finishede neet, mår wyr eklassificered ümdat hy meyr as 90% van de raceavstand vulbracht.<br />
-{{smallsup|‡}} Halve pünten tooekenned ümdat minder as 75% van de raceavstand was vulbrachted.
+† Finishede neet, mår wyr eklassificered ümdat hy meyr as 90% van de raceavstand vulbracht.<br />
+‡ Halve pünten tooekenned ümdat minder as 75% van de raceavstand was vulbrachted.
 
 ==Eyrbetönen en prestatys==
 ===Team===
