--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -663,6 +663,8 @@ Hamilton gebrukeden nen goldekleureden helm by den Grouten Prys van Abu Dhabi va
 |-
 |}
 
+* Seisoon nog beasig
+
 ===Komplete resultåten van de Formule 3 Euro Series===
 
 (Races in '''vet''' wyset up behålen van eyrste startposity; races in ''schuun'' wyset up behålen van snelste runde)
