/* Komplete resultåten van de Formule Eyn */

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -1235,7 +1235,7 @@ Hamilton gebrukeden nen goldekleureden helm by den Grouten Prys van Abu Dhabi va
 | style="background:#ffffbf;"| '''1stes'''
 | style="background:#ffffbf;"| '''347'''
 |-
-| [[Formule Eyn Werldkampioonskap van 2021|2021}}
+| [[Formule Eyn Werldkampioonskap van 2021|2021]]
 ! [[Mercedes-Benz in de Formule Eyn|Mercedes-AMG Petronas F1 Team]]
 ! [[Mercedes-Benz in de Formule Eyn|Mercedes AMG]] [[Mercedes-AMG F1 W12 EQ Performance|F1 W12 EQ Performance]]
 ! [[Mercedes AMG High Performance Powertrains|Mercedes]] M12 EQ Performance 1.6 [[V6 engine|V6]] [[Turbocharger|t]]
