--- a/Harm_Boom.mw
+++ b/Harm_Boom.mw
@@ -17,8 +17,8 @@ Boom skreef veur, en was vanof 1860 redacteur van, de ''PDAC''. Vanof 't zölde 
 Nao een conflict mit de heufdredacteur-uutgever van de ''PDAC'' kwaamp Boom ien 1884 bi'j de ''Nieuwe Provinciale Drentsche en Asser Courant'' te waarken.
 
 ==Anhaling==
-:''Eergisteraovend zat ik bij den heerd um te prakkeseeren. Mien zeuntien Geert preukelde mien piepe oet, onze Siep lag met de twee veurpoote in de asse en wol slaopen en mien vrouw hemmelde de keuken wat op, zooas ze nou al vieftien jaor daon hef. De stobbe, die an den heerd lag, snisterde zoo miseraobel, dak hum wal dree maol umdreide en Siep, die 's aovends geen zeggen kan hebben, bromde as een dronken stukrieder. Ik prakkeseerde maor deur, want ik hadde wat an Jaaije te zeggen.
-:''Toen mien jonge niet meer preukelde en de stobbe niet meer snisterde en Siep niet meer bromde, hoestte ik eerst drei keer en zee toe: 'Ai je mij nou vraogen, wol ie ook wel is nao Grönningen hen, um 't peerdespul van Carré te zien, dan zeg ik: jao'.
+:''Eergisteraovend zat ik bij den heerd um te prakkeseeren. Mien zeuntien Geert preukelde mien piepe oet, onze Siep lag met de twee veurpoote in de asse en wol slaopen en mien vrouw hemmelde de keuken wat op, zooas ze nou al vieftien jaor daon hef. De stobbe, die an den heerd lag, snisterde zoo miseraobel, dak hum wal dree maol umdreide en Siep, die 's aovends geen zeggen kan hebben, bromde as een dronken stukrieder. Ik prakkeseerde maor deur, want ik hadde wat an Jaaije te zeggen.''
+:''Toen mien jonge niet meer preukelde en de stobbe niet meer snisterde en Siep niet meer bromde, hoestte ik eerst drei keer en zee toe: 'Ai je mij nou vraogen, wol ie ook wel is nao Grönningen hen, um 't peerdespul van Carré te zien, dan zeg ik: jao'.''
 :'' 'Maor dat vraog ik oe nou precies niet' - zee Jaaije kort of en schuef de hond met de klomp wat op zied om 't vuur op te rakelen veur de koffie.' ''
 
 Uut 't verhaal ''Berend Veltink oet 't Emmer kerspel op reize nao Grönningen um 't peerdespul van Carré te zien en wat hum daorbij overkwam, hen en weerum''
