--- a/Rhode_Island.mw
+++ b/Rhode_Island.mw
@@ -4,8 +4,7 @@
 | vlagge = [[Bestaand:Flag of Rhode Island.svg|125px|border|Vlagge van Rhode Island.]]
 | wapen = [[Bestaand:Seal of Rhode Island.svg|125px|Woapn van Rhode Island.]]
 | kaorte = Map of USA RI.svg
-| biejnoam = ''The Ocean State''
-* ''Little Rhody''
+| biejnoam = ''The Ocean State''<br>''Little Rhody''
 | motto = ''Hope''
 | heufdstad = [[Providence (Rhode Island)|Providence]]
 | oppervlak laand = 3,140
