--- a/Krentenstoete.mw
+++ b/Krentenstoete.mw
@@ -1,3 +1,4 @@
+[[File:Krentewegge voor een geboorte .jpg|thumb|Et kind op de krentewegge bie 't kroamschudden]]
 Een '''krentenstoete''' (oek wel: ''krentenbrood'' of ''krentenkrogge'') is een [[stoete|brood]] waorbie een bulte [[krente]]n mee-ebakken wonnen.
 
 Een "goed krentenstoete" ziet [[zwart]] van de krenten, of hef (zoas ze wel zegen) meer krenten as deeg.
