--- a/Skotsk-gälisk.mw
+++ b/Skotsk-gälisk.mw
@@ -5,9 +5,9 @@
 | klassifikatie = [[Indo-Europese talen|indo-europeesk]] <br />
 * [[Keltiese talen|keltisk]]
 ** [[Goideliske språken|goidelisk]]
-*** skotsk-gälisk'''
+*** skotsk-gälisk
 | skrift = [[Latiens alfabet|latynsk alfabet]]
-| staotus = [[Bestaand:Flag of Scotland.svg|20px]] [[Schotlaand|Skotland]]
+| staotus = [[Bestaand:Flag of Scotland.svg|20px|border]] [[Schotlaand|Skotland]]
 | iso1 = gd
 | iso2 = gla
 | iso3 = gla
