--- a/Derk_Sibolt_Hovinga.mw
+++ b/Derk_Sibolt_Hovinga.mw
@@ -9,17 +9,19 @@ Omreden zien waark as hail muzikoal zain wordt, het t projekt Oost-Groninger Wer
 Marten Grupstra het n borstbeeld van Hovinga môkt, en H.B. Reininga het n biogroafie van hom schreven, ''Derk Sibolt Hovinga: Dichter en boer. De waarheid achter de mythe (2007)''. t D.S. Hovinga-fonds geft zien gedichten opnij oet en subsidieert wiedere Grunnegstoalege kultuuroetingen.
 
 ==Zitoat==
-:''O nacht
-:''Het aailand rust.
-:''Ik stoa mit die allain
-:''Hier aan de leste kust
-:''En om ons roest de zee.
+<poem style="margin-left:1.5em; font-style:italic">
+O nacht
+Het aailand rust.
+Ik stoa mit die allain
+Hier aan de leste kust
+En om ons roest de zee.
 
-:''O wenst,
-:''Het aiweg laid,
-:''Dat in en om ons waait,
-:''En het gain enne nait,
-:''En roest ook in de zee.''
+O wenst,
+Het aiweg laid,
+Dat in en om ons waait,
+En het gain enne nait,
+En roest ook in de zee.
+</poem>
 
 Oet t gedicht ''t Aailand van geluk''
 
@@ -51,5 +53,6 @@ Oet t gedicht ''t Aailand van geluk''
 
 {{Bron}}
 
-[[Kategorie:Grunnegs_artikel|Hovinga, Derk Sibolt]]
-[[Kategorie:Schriever ien t Grunnegs|Hovinga, Derk Sibolt]]
+{{DEFAULTSORT:Hovinga, Derk Sibolt}}
+[[Kategorie:Grunnegs artikel]]
+[[Kategorie:Schriever ien t Grunnegs]]
