--- a/Westerskellings.mw
+++ b/Westerskellings.mw
@@ -1,21 +1,21 @@
-{{Spraoke|
-spraoke = Westerskellings, Westers |
-naam_anders = Skylgersk, Westersk (Fries), Schylgers, Westers (Westerskellings) |
-laand = [[Nederlaand]] |
-gebeed = t westelike part van t [[Frieslaand|Friese]] [[Waddeneilaand]] [[Terschelling|Terskelling]] |
-sprekkers = 400 (skatting 2004) |
-dialekte = gien |
-klassifikatie = [[Indo-Europees]] - [[Germaanse sproaken|Germaans]] - [[West-Germoanse toalen|West-Germaans]] - [[Freeske taaln|Fries]] - [[Westlaauwers Frais|Westlauwers Fries]] - '''Oosterskellings''' |
-skrift = t [[Latiense alfabet]] |
-staotus = t Westerskellings wordt zien as n dialekt van t [[Westlaauwers Frais|Fries]]; op himzels geniet t gien erkenning |
-iso1 = n.v.t. |
-iso2 = n.v.t. |
-iso3 = n.v.t. |
+{{Spraoke
+| spraoke = Westerskellings, Westers
+| naam_anders = Skylgersk, Westersk (Fries), Schylgers, Westers (Westerskellings)
+| laand = [[Nederlaand]]
+| gebeed = t westelike part van t [[Frieslaand|Friese]] [[Waddeneilaand]] [[Terschelling|Terskelling]]
+| sprekkers = 400 (skatting 2004)
+| dialekte = gien
+| klassifikatie = [[Indo-Europees]] - [[Germaanse sproaken|Germaans]] - [[West-Germoanse toalen|West-Germaans]] - [[Freeske taaln|Fries]] - [[Westlaauwers Frais|Westlauwers Fries]] - '''Oosterskellings'''
+| skrift = t [[Latiense alfabet]]
+| staotus = t Westerskellings wordt zien as n dialekt van t [[Westlaauwers Frais|Fries]]; op himzels geniet t gien erkenning
+| iso1 = n.v.t.
+| iso2 = n.v.t.
+| iso3 = n.v.t.
 }}
 [[Bestaand:Lânkaart lokaasje Skylgersk.PNG|thumb|De lokaosie van t Westerskellinger dialekt in t [[Westlaauwers Frais|Fries]]e [[tael]]gebied.]]
-[[Bestaand:Terschelling 141.JPG|thumb|right|Uutzicht op [[West-Terskelling]], mit links de Brandaris.]]
+[[Bestaand:Terschelling 141.JPG|thumb|Uutzicht op [[West-Terskelling]], mit links de Brandaris.]]
 [[Bestaand:Terschelling.jpg|thumb|Uutzicht op [[West-Terskelling]] van zee of.]]
-[[Bestaand:Terschelling 040.JPG|thumb|right|250px|De haven van [[West-Terskelling]].]]
+[[Bestaand:Terschelling 040.JPG|thumb|250px|De haven van [[West-Terskelling]].]]
 t '''Westerskellings''' of '''Westers''' is t [[Freeske taaln|Friese dialekt]] dat spreuken wordt op t westelike part van t [[Frieslaand|Friese]] [[Waddeneilaand|Waddeneilaand]] [[Terschelling|Terskelling]]. t Is nauw verwaant an t [[Oosterskellings]], t dialekt van t oostelike part van [[Terschelling|Terskelling]]. 
 
 De beide Friese zusterdialekten worden van mekeer skeiden deur t [[Midslaands]], t [[Hollaands (dialekt)|Hollaandse]] dialekt dat spreuken wordt op t eilaand. t Is tegere mit t Westerskellings sund t midden van de [[20e ieuw]] stark in verval raekt, omdat de tael haost niet meer deurgeven wordt an de kiender. De overbleven sprekers bin veurnaemelik oolderen. 
@@ -82,9 +82,9 @@ Behalve de invloed van t Hollaands-Friese [[Midslaands]]e [[dialekt]] en laeter 
 
 ==Veurbieldtekst==
 Hieronder n veurbieldtekst van t Westerskellings, n fragment uut t veurwoord van t ''Woddenboek fan et Westers'', deur K.F. van der Veen:
-<blockquote>''Dut is et easte woddenboek fan et Westers, de Fryse tongslag fan et dorp West op Schylge. Et Westers is ien fan de trea tongslaggen fan et eilôn. De oaren binne et Meslônzers, un Frys-Nederlands mingdialekt, en et Aasters, dat wer un Frys dialekt is en et meeste op et Westers liket, al binne der wol feschillen. Et woddenboek besteet út twae delen: un Nederlands-Westers woddenlijst, alfabetys op et Nederlands, en un Westers-Nederlandse woddenlijst, alfabetys op et Westers. Yn et woddenboek binne un lytse fiifduzend Wester wodden ferworket, yn wezen mar un lyts deel fan de folsleine woddenschat.
+<blockquote>''Dut is et easte woddenboek fan et Westers, de Fryse tongslag fan et dorp West op Schylge. Et Westers is ien fan de trea tongslaggen fan et eilôn. De oaren binne et Meslônzers, un Frys-Nederlands mingdialekt, en et Aasters, dat wer un Frys dialekt is en et meeste op et Westers liket, al binne der wol feschillen. Et woddenboek besteet út twae delen: un Nederlands-Westers woddenlijst, alfabetys op et Nederlands, en un Westers-Nederlandse woddenlijst, alfabetys op et Westers. Yn et woddenboek binne un lytse fiifduzend Wester wodden ferworket, yn wezen mar un lyts deel fan de folsleine woddenschat.''
 
-Et woddenboek is schrouwn trog Martha van Wichen-Schol. Yn maart 1980 stjoerde ja mi et easte begin fan et woddenboek tò. Dat bestong út un lijst mei de Nederlandse wodden yn dut woddenboek di mei de letter A beginne en dirachter et fertaalde yn et Westers. Ja schrouw dirbi dat se de lijst op oanwizingen fan C. Roggen gestalte jouwn hi. Ik doog har te witten dat de Fryske Akademy bli mei har ynbring waar en wi hoopten op et ferfolg. Yn de maanden en jieren dirnei komen op deselde wiize alle letters klear. De leste letter koom yn oktober 1983 op et Coulonhús, dus so'n trea en un half jier nei de easte letter.''</blockquote>
+''Et woddenboek is schrouwn trog Martha van Wichen-Schol. Yn maart 1980 stjoerde ja mi et easte begin fan et woddenboek tò. Dat bestong út un lijst mei de Nederlandse wodden yn dut woddenboek di mei de letter A beginne en dirachter et fertaalde yn et Westers. Ja schrouw dirbi dat se de lijst op oanwizingen fan C. Roggen gestalte jouwn hi. Ik doog har te witten dat de Fryske Akademy bli mei har ynbring waar en wi hoopten op et ferfolg. Yn de maanden en jieren dirnei komen op deselde wiize alle letters klear. De leste letter koom yn oktober 1983 op et Coulonhús, dus so'n trea en un half jier nei de easte letter.''</blockquote>
 
 {{SNLV}}
 {{Bron|
