--- a/Grunneger_gerechten_en_streekprodukten.mw
+++ b/Grunneger_gerechten_en_streekprodukten.mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Spekdikken.jpg|right|250px|thumb|Westerwôldse [[spekdik]]ken]]
+[[Ofbeelding:Spekdikken.jpg|250px|thumb|Westerwôldse [[spekdik]]ken]]
 In [[Grunnen (provìnzie)|Grunnen]] is noast eerdappels t vlaisk t belaangriekste vouer. De veurnoamste vlaisksoorten dij eten worden binnen [[rindvlaisk]], [[visk]] en [[genoat]], ien tieds dat man vrouger juust veuraal swienevlais (spek) at. Bie gerechten mit eerdappels zit aaltieds vlaisk. Bie gerechten mit vlaisk hovven nait aaltieds eerdappels te zitten. Vrouger was dit aansom. Tot aan Twijde Wereldoorlog wazzen veul gezinnen aarm en konden niks aans eten as eerdappels mit gruinten. Veur dizze aarmere gezinnen was t eten van vlais n biezunderhaid. Noa Twijde Wereldoorlog kregen luu wat meer gèld ien buuts en wör vlais n gewoonte. Vlicht juust omdat man vrouger noeit vlais eten kon, wör vlais nou slim populèr. Vlais dat ien Grunnen voak eten wör is [[spek]], [[gehakbaal]], [[sukoadelap]] en vèrse wôrst (kookt of bakken as [[saucijse|sousies]]). De maiste van dizze vlaissoorten kommen nait allend ien Grunnen veur, dus zai stoan doarom nait hieronder bie vermèld.
 
 Ook binnen de Grunneger mostert en kruudnoagel wichtege [[ingrediënt|touvougsels]] in n hail ìnde gerechten.
@@ -26,7 +26,7 @@ Net as ien de rest van Nederlaand, Bèlgie en Noord-Duutslaand wordt [[brood|sto
 * ''Rolletjes'' - Oprolde knieperkes, tegenswoordeg ook machinoal môkt. Dizzent binnen typisch Grunnegs. Allend eten tuzzen kìrst en nijjoar.
 * ''[[Spekdik]]ken'' - n Soort roggepankouk mit stroop, metwôrst en spek. Ôfkomsteg oet Westerwôlde en allend eten tuzzen kìrst en nijjoar.
 * ''Fieterknutten'' - Klaimske koekjes, verliekensboar mit n kombinoatsie van n toai-toai (''taai-taai'') en Fraise doemkes (''Fryske dúmkes'')
-* ''Pleverkouk'' - n Grote, ronde, klaimske kouk môkt van aaier. t Wordt doarom ook wel ''aaierkouk'' nuimd''.
+* ''Pleverkouk'' - n Grote, ronde, klaimske kouk môkt van aaier. t Wordt doarom ook wel ''aaierkouk'' nuimd.
 
 == Veur-eterij ==
 Thoes wordt en wör deurentieds nait voak n veurgerecht nomen. Allend mit spesjoale gelegenheden of ien restoraants worden veurgerechten daind. 
