--- a/Utrecht_(provinsie).mw
+++ b/Utrecht_(provinsie).mw
@@ -1,28 +1,28 @@
 {{wrapper}}
 |
-{{Provinzietabel |
-noam = Utrecht |
-vlageofbeelden = [[Bestaand:Utrecht (province)-Flag.svg|125px|Previnsievlag]] |
-woapenofbeelden = [[Bestaand:Arms Utrecht Province.png|130px|Previnsiewaopen]] |
-körtnoam = Utrecht |
-heufdstad = [[Utrecht (stad)|Utrecht]] |
-religiejoar = 1999 |
-breedtegroad = 52/08// |
-lengtegroad = 5/13// |
-region = NL-UT |
-religie = [[Protestantisme|Protestants]] 27%<br />[[Rooms-Katholieke Karke|Katholiek]] 20% |
-opprange = 1.449,12 |
-opp = 1.385,02   |
-woateropp = 64,1  |
-inwoners = 1.354.979 |
-doatum = jan 2020 |
-bevolkensdichtte = 978 |
-volkslaid = [[Langs de Vecht en d'oude Rijnstroom|Langs de Vecht en<br /> d'oude Rijnstroom]] |
-ofbeelden = Utrecht-Position.png |
-webstee = [http://www.provincie-utrecht.nl www.provincie-utrecht.nl] |
+{{Provinzietabel
+| noam = Utrecht
+| vlageofbeelden = [[Bestaand:Utrecht (province)-Flag.svg|125px|border|Previnsievlag]]
+| woapenofbeelden = [[Bestaand:Arms Utrecht Province.png|130px|Previnsiewaopen]]
+| körtnoam = Utrecht
+| heufdstad = [[Utrecht (stad)|Utrecht]]
+| religiejoar = 1999
+| breedtegroad = 52/08//
+| lengtegroad = 5/13//
+| region = NL-UT
+| religie = [[Protestantisme|Protestants]] 27%<br />[[Rooms-Katholieke Karke|Katholiek]] 20%
+| opprange = 1.449,12
+| opp = 1.385,02  
+| woateropp = 64,1 
+| inwoners = 1.354.979
+| doatum = jan 2020
+| bevolkensdichtte = 978
+| volkslaid = [[Langs de Vecht en d'oude Rijnstroom|Langs de Vecht en<br /> d'oude Rijnstroom]]
+| ofbeelden = Utrecht-Position.png
+| webstee = [http://www.provincie-utrecht.nl www.provincie-utrecht.nl]
 }}
 [[Bestaand:Prov-Utrecht-OpenTopo.jpg|thumb|Utrecht]]
- 
+
 '''Utrecht''' is met n [[oppervlakte]] van 1.449&nbsp;km² de kleinste provinsie van [[Nederlaand|Nederlangd]] en t het ongeveer 1,35 miljoen inwoeners. De provinsie Utrecht, waor de minsen t dichtst op mekaor woenen, en dat sentraol leit wort meestal tot de [[Raandstad (gebeed)|Rangdstad]] erekend. De heufdstad is [[Utrecht (stad)|Utrecht]]. Dee stad was t sentrum van t bisdom of [[Sticht Utrecht]], de veurloper van wat nong de provinsie Utrecht is. De tweede grote stad van de provinsie is [[Amersfoort]], de daarde is [['t Veen|t Veen]]. Utrecht leit an de grens met [[Gelderlaand|Gelderlangd]], [[Zuud-Hollaand|Zuud-Hollangd]], [[Noord-Hollaand|Noord-Hollangd]] en [[Flevolaand|Flevolangd]].
 
 In de plaotsen [[Bunsjoten]], [[Spaokenburg]], [[Leusden]] en Amersfoort worren oorspronkelik [[West-Veluws]]e en [[Eemlangds]]e dialekten espreuken.
@@ -57,7 +57,7 @@ Overzicht van de Utrechtse gemeenten.
 <li>[[Wiek bi-j Duurstee|Wiek bie Duurstede]]<br/ > (''Wijk bij Duurstede'')
 <li>[[Woerden]]
 <li>[[Wombaarg]] (''Woudenberg'')
-<li>[[Zeist]]
+<li>[[Zeist]]</ol>
 |}
 
 {{Utrecht}}
