--- a/Zujerzeewarken.mw
+++ b/Zujerzeewarken.mw
@@ -1,4 +1,4 @@
-[[Bestaand:Zuiderzeewerken-NL.png|thumb|right|Zujerzeewarken]]
+[[Bestaand:Zuiderzeewerken-NL.png|thumb|Zujerzeewarken]]
 De '''Zujerzeewarken''' waren een projekt waormee de [[Zujerzee]] of-esleuten worde tot [[Iesselmeer]] en deels in-epolderd worde. Ze beheuren tot de grootste waoterbouwkundige projekten die ooit uutevoerd bin. Van et uutbrengen van et plan van [[Cornelis Lely]] in [[1891]] tot an de voltooiing van de diek [[Enkhuzen]]-[[Lelystad]] in [[1975]] hen de warken meer as driekwart eeuw in beslag eneumen. Et is niet uut te sluten dat de warken in de toekomst nog een vervolg kriegen.
 
 == Redenen veur et dreuglegen ==
@@ -96,13 +96,13 @@ Opvallend is dat et Plan Lely uut 1891 in heufdlienen en zelfs in details is uut
 {| class="wikitable" 
 |+'''Gegevens over et wark'''
 |-
-|bgcolor="lightgrey"|Projekt
-|bgcolor="lightgrey"|Diek
-|bgcolor="lightgrey"|Lengte
-|bgcolor="lightgrey"|Begin
-|bgcolor="lightgrey"|t Sluten van
-|bgcolor="lightgrey"|Maot
-|bgcolor="lightgrey"|Ontwaotering
+!Projekt
+!Diek
+!Lengte
+!Begin
+!t Sluten van
+!Maot
+!Ontwaotering
 |-
 |Ansluiting van et eiland [[Wieringen]]
 |align="center"|[[Amsteldiepdiek]]
@@ -239,7 +239,7 @@ Begin [[1990-1999|jaoren negentig]] is besleuten, vanwege milieuredenen (t Marke
 
 == Herinnering an de Zujerzee ==
 * [[Willy van Hemert]] (tekst) en [[Joop de Leur]] (muziek) schreven et lied de [[Zujerzeeballade]] ([[1958]]), waorin de veuruutgang en (vissers)geschiedenis beschreven worde. De grappemaker [[Sylvain Poons]] treet daorin op as de grootvaor die et allemaol aarst het zien worren.
-* In 1964 verscheen et boek ''Herinneringen van een bramzijgertje" deur [[Jan de Hartog]],  over een jongetjen dat as "bramzijgertje" meevaort mit de visservloot. In et leste heufdstuk gaot ie nog es weer. De slotzin luut: ''Toe ik deur de opening in de diek ree, veulde ik m'n niet langer oud en eenzaam, want ik wis dat der eigenlik niks verleuren egaon is, alleen was een kienderzee veranderd in een kienderland.''
+* In 1964 verscheen et boek ''Herinneringen van een bramzijgertje'' deur [[Jan de Hartog]], over een jongetjen dat as "bramzijgertje" meevaort mit de visservloot. In et leste heufdstuk gaot ie nog es weer. De slotzin luut: ''Toe ik deur de opening in de diek ree, veulde ik m'n niet langer oud en eenzaam, want ik wis dat der eigenlik niks verleuren egaon is, alleen was een kienderzee veranderd in een kienderland.''
 * In Enkhuzen zit et [[Zujerzeemuseum]] en in Lelystad et ''Nieuw Land Erfgoedcentrum''. Hier is veul te zien over de geschiedenis van de Zujerzee en et Iesselmeer.
 
 {{Dialekt|wvel|Putten|Algemene Nedersaksiese Schriefwieze}}
